--- a/public/css/style.css
+++ b/public/css/style.css
@@ -141,7 +141,7 @@ a:hover, a:focus, a:active, a:visited {
 	padding: 20px;
 	margin-top: 30px;
 }
-.feature span {
+.feature i {
 	font-size: 5em;
     color: #016cc7;
 }
